--- a/app.yaml
+++ b/app.yaml
@@ -9,6 +9,7 @@ spec:
   containers:
   - name: abccon
     image: sivasairyali/abc_tech:latest
+    imagePullPolicy: Always
     ports:
       - containerPort: 8080
 
